name:          bits
category:      Data, Serialization
version:       0.4
license:       BSD3
cabal-version: >= 1.8
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/analytics/bits
bug-reports:   http://github.com/analytics/bits/issues
copyright:     Copyright (C) 2013 Edward A. Kmett
build-type:    Custom
tested-with:   GHC == 7.8.3
synopsis:      Various bit twiddling and bitwise serialization primitives
description:   Various bit twiddling and bitwise serialization primitives

extra-source-files:
  .travis.yml
  .ghci
  .gitignore
  .vim.custom
  travis/cabal-apt-install
  travis/config
  AUTHORS.markdown
  README.markdown
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/analytics/bits.git

-- You can disable the doctests test suite with -f-test-doctests
flag test-doctests
  default: True
  manual: True

flag lib-Werror
  default: False
  manual: True

flag use-ffi
  manual: True
  default: True

library
  build-depends:
    base         >= 4.7      && < 5,
    bytes        >= 0.11     && < 1,
    mtl          >= 2.0      && < 2.3,
    transformers >= 0.2      && < 0.5,
    -- this is only actually used if the FFI isn't.  It's not guarded
    -- by the use-ffi flag because doctest will look at Tables no
    -- matter what, and will fail if bytestring isn't exposed.
    bytestring   >= 0.9      && < 1


  exposed-modules:
    Data.Bits.Coding
    Data.Bits.Coded
    Data.Bits.Extras

  if flag(lib-Werror)
    ghc-options: -Werror

  -- I would rather have the definition of use-ffi be conditional
  -- on impl(ghcjs) but that causes a cabal error:
  --    https://github.com/haskell/cabal/issues/1069
  if flag(use-ffi) && !impl(ghcjs)
    cpp-options: -DBITS_USE_FFI
    c-sources: cbits/debruijn.c
    other-modules:
      Data.Bits.Extras.Foreign
  else
    other-modules:
      Data.Bits.Extras.Tables

  ghc-options: -Wall -fwarn-tabs -O2
  hs-source-dirs: src

test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests

  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base,
      directory      >= 1.0,
      doctest        >= 0.9.1,
      filepath       >= 1.2

  if impl(ghc<7.6.1)
    ghc-options: -Werror
